refactor setup.cfg fix paths

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,21 +1,21 @@
 [extract_messages]
 keywords = translate isPlural
 add_comments = TRANSLATORS:
-output_file = ckanext/notify-sysadmin/i18n/ckanext-notify-sysadmin.pot
+output_file = ckanext/notifysysadmin/i18n/ckanext-notifysysadmin.pot
 width = 80
 
 [init_catalog]
-domain = ckanext-notify-sysadmin
-input_file = ckanext/notify-sysadmin/i18n/ckanext-notify-sysadmin.pot
-output_dir = ckanext/notify-sysadmin/i18n
+domain = ckanext-notifysysadmin
+input_file = ckanext/notifysysadmin/i18n/ckanext-notifysysadmin.pot
+output_dir = ckanext/notifysysadmin/i18n
 
 [update_catalog]
-domain = ckanext-notify-sysadmin
-input_file = ckanext/notify-sysadmin/i18n/ckanext-notify-sysadmin.pot
-output_dir = ckanext/notify-sysadmin/i18n
+domain = ckanext-notifysysadmin
+input_file = ckanext/notifysysadmin/i18n/ckanext-notifysysadmin.pot
+output_dir = ckanext/notifysysadmin/i18n
 previous = true
 
 [compile_catalog]
-domain = ckanext-notify-sysadmin
-directory = ckanext/notify-sysadmin/i18n
+domain = ckanext-notifysysadmin
+directory = ckanext/notifysysadmin/i18n
 statistics = true
